--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 pagesBranch=gh-pages
-gitHubRepoUri=https://github.com/angel-94/aml-docs.git
+gitHubRepoUri=https://github.com/angel-94/python-tutorials.git
 version=1.0.0
