--- a/build.gradle
+++ b/build.gradle
@@ -185,7 +185,7 @@ gitPublish {
     repoDir = file("$buildDir/docs/html5")
 
     contents {
-        from "$buildDirectory"
+        from "$buildDir/docs/html5"
         into "."
     }
 
