Add a svg imagen and change properies

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 pagesBranch=gh-pages
 gitHubRepoUri=https://github.com/angel-94/python-tutorials.git
+# gitHubRepoUri=git@github.com:angel-94/python-tutorials.git
 version=1.0.0
